Use consistent tab initial background color and NTP html background color to avoid flashes

--- a/components/brave_blank_page/resources/brave_blank_new_tab.html
+++ b/components/brave_blank_page/resources/brave_blank_new_tab.html
@@ -3,8 +3,8 @@
 <head>
   <title>New Tab</title>
   <style>
-    @media (prefers-color-scheme: dark) {
-      body { background-color: #17171F; }
+    body {
+      background: $i18n{backgroundColor};
     }
   </style>
 </head>
