--- a/components/brave_private_new_tab_ui/resources/page/private_new_tab.html
+++ b/components/brave_private_new_tab_ui/resources/page/private_new_tab.html
@@ -12,7 +12,7 @@
 <style>
   #mountPoint { height: 100%; }
   body {
-    background: #333639;
+    background: $i18n{backgroundColor};
   }
 </style>
 </head>
